update img links and resolve amp-list overflow

--- a/extensions/amp-mega-menu/0.1/amp-mega-menu.css
+++ b/extensions/amp-mega-menu/0.1/amp-mega-menu.css
@@ -19,7 +19,7 @@ amp-mega-menu {
   white-space: nowrap !important;
 }
 
-amp-mega-menu.i-amphtml-layout-size-defined {
+amp-mega-menu.i-amphtml-layout-size-defined[open] {
   overflow: visible !important;
 }
 
